@@ -296,27 +296,31 @@ Object VM::callClosure(Object closure, Object arg)
 Object VM::applyClosure(Object closure, Object args)
 {
     static Object applyCode[] = {
-        Object::makeRaw(Instruction::FRAME),
-        Object::makeInt(7),
         Object::makeRaw(Instruction::CONSTANT),
         Object::Undef,
         Object::makeRaw(Instruction::PUSH),
         Object::makeRaw(Instruction::CONSTANT),
         Object::Undef,
-        Object::makeRaw(Instruction::APPLY),
-        Object::makeRaw(Instruction::RETURN),
+        Object::makeRaw(Instruction::APPLY),  // call closure
+        Object::makeRaw(Instruction::RETURN), // return from apply
         Object::makeInt(0),
         Object::makeRaw(Instruction::HALT)
     };
-    applyCode[3] = args;
-    applyCode[6] = closure;
-    printf("%s %s:%d\n", __func__, __FILE__, __LINE__);fflush(stdout);// debug
-    applyCode[10] = returnCode_[1];
-    pc_ = getDirectThreadedCode(applyCode, 11);
-    printf("%s %s:%d\n", __func__, __FILE__, __LINE__);fflush(stdout);// debug
-//     SAVE_REGISTERS();
-//     const Object ret = evaluate(applyCode, sizeof(applyCode) / sizeof(Object));
-//     RESTORE_REGISTERS();
+
+    // set arguments
+    applyCode[1] = args;
+    // set closure
+    applyCode[4] = closure;
+
+    applyCode[7] = returnCode_[1];
+
+    pc_ = getDirectThreadedCode(applyCode, sizeof(applyCode) / sizeof(Object));
+
+    // Same as Frame.
+    // pc_ + 6 is return point of closure.
+    push(Object::makeObjectPointer(pc_ + 6));
+    push(cl_);
+    push(Object::makeObjectPointer(fp_));
     return ac_;
 }
 
@@ -548,16 +552,16 @@ Object VM::run(Object* code, jmp_buf returnPoint, bool returnTable /* = false */
                 fwrite(logBuf, 1, 2, stream);
 #endif
                 COUNT_CALL(ac_);
-                returnCode_[1] = operand;
-                pc_  = returnCode_;
+                if (ac_.toCProcedure()->proc == applyEx) {
+                    returnCode_[1] = operand;
 
-                // pc_ may be overwrite by CProcedure. for example by applyEx
-                printf("%s %s:%d\n", __func__, __FILE__, __LINE__);fflush(stdout);// debug
-
-                // applyClosure の中で呼ばれる FRAME の時点で正しい戻り先がセットされている必要がある。
-                ac_ = ac_.toCProcedure()->call(stackToPairArgs(sp_, operand.toInt()));
-                printf("%s %s:%d\n", __func__, __FILE__, __LINE__);fflush(stdout);// debug
-
+                    // pc_ will be changed in applyEx
+                    ac_ = ac_.toCProcedure()->call(stackToPairArgs(sp_, operand.toInt()));
+                } else {
+                    ac_ = ac_.toCProcedure()->call(stackToPairArgs(sp_, operand.toInt()));
+                    returnCode_[1] = operand;
+                    pc_  = returnCode_;
+                }
             } else if (ac_.isClosure()) {
 
                 const Closure* const c = ac_.toClosure();
@@ -879,7 +883,6 @@ Object VM::run(Object* code, jmp_buf returnPoint, bool returnTable /* = false */
         }
         CASE(FRAME)
         {
-            printf("%s %s:%d\n", __func__, __FILE__, __LINE__);fflush(stdout);// debug
         frame_entry:
             const Object n = fetchOperand();
             TRACE_INSN1("FRAME", "(~d)\n", n);
@@ -1320,7 +1323,7 @@ Object VM::run(Object* code, jmp_buf returnPoint, bool returnTable /* = false */
         }
         CASE(RETURN)
         {
-            printf("<RETURN> %s %s:%d\n", __func__, __FILE__, __LINE__);fflush(stdout);// debug
+//            printf("RETURN %d\n", operand.toInt());
             operand = fetchOperand();
         return_entry:
 #ifdef DUMP_ALL_INSTRUCTIONS
@@ -1556,7 +1559,6 @@ Object VM::splitId(Object id)
 
 Object VM::getStackTrace()
 {
-    printf("%s %s:%d\n", __func__, __FILE__, __LINE__);fflush(stdout);// debug
     const int MAX_DEPTH = 20;
     Object sport = Object::makeStringOutputPort();
     TextualOutputPort* port = sport.toTextualOutputPort();
@@ -1582,7 +1584,6 @@ Object VM::getStackTrace()
             port->display(UC("      ... (more stack dump truncated)\n"));
             break;
         }
-
         cl = fp - 2;
         if (fp > stack_) {
             fp = (fp - 1)->toObjectPointer();
@@ -1602,7 +1603,8 @@ void VM::raise(Object o)
 void VM::raiseFormat(const ucs4char* fmt, Object list)
 {
     const Object errorMessage = formatEx(Object::cons(Object::makeString(fmt), list));
-    raise(stringAppendEx(L3(errorMessage, Object::makeString(UC("\n")), getStackTrace())));
+    const Object tr = getStackTrace();
+    raise(stringAppendEx(L3(errorMessage, Object::makeString(UC("\n")), tr)));
 }
 
 #ifdef ENABLE_PROFILER
