@@ -674,7 +674,9 @@ Object scheme::fileExistsPEx(Object args)
 // string-output-port only
 Object scheme::sysGetOutputStringEx(Object args)
 {
+    printf("%s %s:%d\n", __func__, __FILE__, __LINE__);fflush(stdout);// debug
     StringTextualOutputPort* p = reinterpret_cast<StringTextualOutputPort*>(args.first().toTextualOutputPort());
+    printf("%s %s:%d\n", __func__, __FILE__, __LINE__);fflush(stdout);// debug
     return Object::makeString(p->getString());
 }
 
