@@ -1,5 +1,10 @@
 (apply print '(1))
-(exit)
+(apply print '(2))
+(apply print '(3))
+(apply (lambda (a b) (print a) (print b)) '(3 1235))
+
+(apply (lambda (a b c) (print (+ a b c))) 1 2 '(3))
+;(exit)
 ;; (define (http-get url)
 ;;   (call-process (format "wget ~a -O- -q" url)))
 
@@ -67,12 +72,6 @@
              (hashtable-set! table (car syms) (+ it 1))
              (hashtable-set! table (car syms) 1))
         (loop (cdr syms))]))
-    (print "before")
-    (hashtable-for-each (lambda (key val)
-                          (if (> val 100)
-                              (format #t "~a ~a\n" key val)))
-                        calls-hash)
-    (print "after")
     (for-each
      (lambda (x)
        (aif (hashtable-ref calls-hash (first x) #f)
@@ -94,18 +93,12 @@
        table)
       (lambda (x y) (> (third x) (third y)))))
     (let1 seen-syms (vector->list (hashtable-keys table))
-      (for-each (lambda (x) (if (procedure? x) (print (source-info x))))  seen-syms)
-;      (print (vector->list (hashtable-keys calls-hash)))
-;      (print calls)
       (for-each
        (lambda (p)
-         (foramt #t "p = ~a\n" p)
          (format #t "   0            0 ~a   ~a\n" (lpad (cdr p) " " 10) (rpad (car p) " " 30)))
-       (print "before")
-       (print (hashtable->alist calls-hash))
-       (let1 filterd (filter (lambda (x) (print x) (not (memq (car x) seen-syms))) (hashtable->alist calls-hash))
-         (print "filter done")
-       ($take (sort  filterd(lambda (a b) (format #t "a=~a b=~a\n" a b) (> (cdr a) (cdr b)))) 30)))
+       (let1 filterd (filter (lambda (x) (not (memq (car x) seen-syms))) (hashtable->alist calls-hash))
+         (let1 sorted (sort filterd(lambda (a b) (> (cdr a) (cdr b))))
+       ($take  sorted 30))))
     (format #t "  **   ~d          **   total\n" (lpad (* (* total 10)) " " 10)))))
 
 (define a (lambda (x) 3))
