@@ -1,3 +1,7 @@
+2008-06-17  higepon  <higepon@users.sourceforge.jp>
+
+	* VM.cpp (VM::applyClosure): Improved apply procedure. It used to use C stack, so changed not to use C stack.
+
 2008-06-16  higepon  <higepon@users.sourceforge.jp>
 
 	* freeproc.cpp : Fixed (exit) procedure. thx leque.
